--- a/test1/index.html
+++ b/test1/index.html
@@ -1,15 +1,16 @@
 <!doctype html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>react-components</title>
-      <script src="https://cdn.tailwindcss.com"></script>
+    <title>test1</title>
+</head>
 
-  </head>
-  <body>
+<body class="bg-gray-900">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-  </body>
+</body>
+
 </html>
